--- a/kotlin/app/src/main/res/layout/activity_huaweiid.xml
+++ b/kotlin/app/src/main/res/layout/activity_huaweiid.xml
@@ -5,7 +5,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         android:paddingLeft="@dimen/activity_title_margin"
         android:paddingTop="@dimen/activity_title_margin"
@@ -13,8 +13,10 @@
         tools:context="com.huawei.hmssample.HuaweiIdActivity">
 
         <TextView
+            android:text="@string/sample_hwid_description"
             style="@style/TitleStyle"
-            android:text="@string/sample_hwid_description" />
+            />
+
 
         <Button
             android:id="@+id/hwid_signin"
@@ -26,6 +28,7 @@
             style="@style/ButtonStyle"
             android:text="@string/hwid_revokeAccess" />
 
+
         <Button
             android:id="@+id/hwid_signout"
             style="@style/ButtonStyle"
@@ -35,6 +38,6 @@
             android:id="@+id/framelog"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="5dp" />
+            android:layout_marginTop="5dp"></FrameLayout>
     </LinearLayout>
 </ScrollView>
